--- a/gb/23/1/12/n13905345.md
+++ b/gb/23/1/12/n13905345.md
@@ -1,16 +1,18 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>世卫指中共严重低估疫情 分析：数据假得离谱</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2023/01/id13905643-Collage-Maker-12-Jan-2023-04.33-PM-600x400.jpg" />
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2023/01/id13905643-Collage-Maker-12-Jan-2023-04.33-PM-600x400.jpg" />///image2=```diff
+- 中国疫情海啸一个多月以来，发烧药断货，医院爆满，一床难求，尸体横陈，火葬场大排长龙。然而，中共官方不懈地、肆无忌惮地通报着自己都不信的染疫与死亡数据。（网络截图）
+```
 <h6>中国疫情海啸一个多月以来，发烧药断货，医院爆满，一床难求，尸体横陈，火葬场大排长龙。然而，中共官方不懈地、肆无忌惮地通报着自己都不信的染疫与死亡数据。（网络截图）
 </h6>
 <hr>
-	<p>【大纪元2023年01月12日讯】（大纪元记者夏松综合报导）中共疾控中心自1月8日报告新冠感染新增确诊病例14171例、新增3例<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%AD%BB%E4%BA%A1.md#1">死亡</a>后，至今没有再更新<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%95%B0%E6%8D%AE.md#1">数据</a>。然而，中国这一波疫情海啸一个多月以来，发烧药断货，医院爆满，一床难求，尸体横陈，火葬场大排长龙；外界强烈质疑中共数据造假。</p>
-<p>世卫组织昨天（11日）批评中方严重低报<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%AD%BB%E4%BA%A1.md#1">死亡</a>人数，“这样的数字无法接受”；中共专家却称，“没有必要纠结新冠死亡的确切人数”。分析认为，疫情数字假得离谱，不是<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%AB%98%E7%BA%A7%E9%BB%91.md#1">高级黑</a>或倒行逆施，就是<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%90%85%E6%B5%91%E6%B0%B4.md#1">搅浑水</a>。</p>
+	<p>【大纪元2023年01月12日讯】（大纪元记者夏松综合报导）中共疾控中心自1月8日报告新冠感染新增确诊病例14171例、新增3例死亡后，至今没有再更新数据。然而，中国这一波疫情海啸一个多月以来，发烧药断货，医院爆满，一床难求，尸体横陈，火葬场大排长龙；外界强烈质疑中共数据造假。</p>
+<p>世卫组织昨天（11日）批评中方严重低报死亡人数，“这样的数字无法接受”；中共专家却称，“没有必要纠结新冠死亡的确切人数”。分析认为，疫情数字假得离谱，不是高级黑或倒行逆施，就是搅浑水。</p>
 <h2>世卫：严重低估染疫死亡人数 中共称没必要纠结</h2>
 <p>过去三年，中共通报COVID-19（新冠病毒，中共病毒）疫情数字都由国家卫健委网发布，但在去年12月疫情大爆发后，12月25日改由中共疾控中心发布。</p>
-<p>今天（12日），记者查询中共疾控中心网，发现当局已连续3天没有更新通报每日感染及死亡<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%95%B0%E6%8D%AE.md#1">数据</a>，疫情信息停留在1月8日。</p>
+<p>今天（12日），记者查询中共疾控中心网，发现当局已连续3天没有更新通报每日感染及死亡数据，疫情信息停留在1月8日。</p>
 <p>世界卫生组织总干事谭德塞11日在例行疫情发布会上表示，鉴于中国染疫死亡人数报告不足，几乎可以肯定的是上周全球通报的1.1万多例新冠（中共病毒）死亡病例被低估。谭德塞称“这样的数字无法接受”。</p>
 <p>世界卫生组织紧急状态部负责人瑞安（Michael Ryan）11日在记者会上表示，世卫相信“中国严重低估了死于新冠病毒的人数”。</p>
 <p>世卫组织新冠疫情应对技术主管玛丽亚?范克尔克霍夫（Maria Van Kerkhove）在发布会上表示，世卫正在努力让中国填补一些重大的信息缺失，首先是传播动态。同时，应当了解重症监护压力和死亡人数的实际水平。</p>
@@ -18,7 +20,7 @@
 <h2>民间质疑：官方感染与死亡数据造假严重</h2>
 <p>中共官方公布的数据与现实差距太大，已经引起国内一些媒体、机构与民众强烈不满。</p>
 <p>网易号资讯内容作者“慧翔百科”1月6日依据中共国家疾控中心数据，制作了“12月7日以来全国本土确诊病例数走势”图，该图显示，全国31个省区市累计新增12万零85例确诊病例，累计死亡30例。</p>
-<p><ahref="https://i.epochtimes.com/assets/uploads/2023/01/id13905567-d62ca05ea9d6e1a9555f38a576ad9b88.jpeg"><img class="size-large wp-image-13905567 aligncenter" src="https://i.epochtimes.com/assets/uploads/2023/01/id13905567-d62ca05ea9d6e1a9555f38a576ad9b88-600x336.jpeg" alt="" width="600" b="336" /></a></p>
+<p><ahref="https://i.epochtimes.com/assets/uploads/2023/01/id13905567-d62ca05ea9d6e1a9555f38a576ad9b88.jpeg"><img decoding="async" class="size-large wp-image-13905567 aligncenter" src="https://i.epochtimes.com/assets/uploads/2023/01/id13905567-d62ca05ea9d6e1a9555f38a576ad9b88-600x336.jpeg" alt="" width="600" b="336" /></a></p>
 <p>同日，陆媒网易新闻刊登一篇题为“真没想到！放开整整1个月，全国确诊12万例，累计死亡30例……”的报导，最后问到：这是基于官方发布的数据得出的结论，真实情况又如何呢？你又如何看待官方发布的疫情数据呢？</p>
 <p>网民跟帖痛斥，“这文章发出来干啥？？？除了失去信任还有其它的功效吗？？”“这也难怪世卫组织不相信我们”“这得有多么无耻”“这是今天最搞笑的新闻”。还有网友嘲讽，“光荣伟大正确的数据 不容置疑的数据 经得起考验的数据”。</p>
 <p>有的媒体无视中共官方数据，另辟蹊径，寻找可能的真相。</p>
@@ -27,11 +29,11 @@
 <p>经综合调查数据后，人社通基本评估：全国总体感染率超过70%，感染总人口超过9.8亿人，甚至10亿人。按目前情势推测，1月中国新年后第一波感染结束时，感染率可能超过80%，达12亿人。</p>
 <p>其实，一个多月以来，民众持续不断发出医院爆满、火葬场大排长龙的视频。</p>
 <p>网传视频：上海医疗系统崩溃，医院不再接收病人。</p>
-<p><center><a title="上海疫情没有结束！医疗系统崩溃，医院不再接收病人" src="https://www.ganjing.com/zh-TW/embed/1fhvkhd4kujME8Zpl5roliVEs1r81c" width="640" b="360" frameborder="0" allowfullscreen="allowfullscreen" data-mce-fragment="1"></a></center>网传视频：1月11日，深圳殡仪馆人头攒动。</p>
-<p><center><a title="1月11日 深圳殡仪馆" src="https://www.ganjing.com/zh-TW/embed/1fi1kkkn4u174WECu9VLbSURX1q81c" width="640" b="360" frameborder="0" allowfullscreen="allowfullscreen" data-mce-fragment="1"></a></center>网传视频：湖南邵阳某殡仪馆，遍地都是装好尸体的棺材。</p>
-<p><center><a title="湖南邵阳 殡仪馆，遍地装好尸体的棺材" src="https://www.ganjing.com/zh-TW/embed/1fhvfnqcjsd3P0S1T6iszCrra1q91c" width="640" b="360" frameborder="0" allowfullscreen="allowfullscreen" data-mce-fragment="1"></a></center>除了大陆民众发出的视频、信息外，美国卫星图像公司Maxar照片显示，中国多个城市火葬场都有门外车辆排队、停车场使用频率高、昼夜无差别现象，卫星照片佐证了民众的说法。</p>
+<p><center><a title="上海疫情没有结束！医疗系统崩溃，医院不再接收病人" src=""></a><a href="https://d2bd0i85jg8bcc.cloudfront.net/Y7t&#29983/zh-TW/embed/1fhvkhd4kujME8Zpl5roliVEs1r81c" width="640" b="360" frameborder="0" allowfullscreen="allowfullscreen" data-mce-fragment="1"></a></center>网传视频：1月11日，深圳殡仪馆人头攒动。</p>
+<p><center><a title="1月11日 深圳殡仪馆" src=""></a><a href="https://d2bd0i85jg8bcc.cloudfront.net/Y7t&#29983/zh-TW/embed/1fi1kkkn4u174WECu9VLbSURX1q81c" width="640" b="360" frameborder="0" allowfullscreen="allowfullscreen" data-mce-fragment="1"></a></center>网传视频：湖南邵阳某殡仪馆，遍地都是装好尸体的棺材。</p>
+<p><center><a title="湖南邵阳 殡仪馆，遍地装好尸体的棺材" src=""></a><a href="https://d2bd0i85jg8bcc.cloudfront.net/Y7t&#29983/zh-TW/embed/1fhvfnqcjsd3P0S1T6iszCrra1q91c" width="640" b="360" frameborder="0" allowfullscreen="allowfullscreen" data-mce-fragment="1"></a></center>除了大陆民众发出的视频、信息外，美国卫星图像公司Maxar照片显示，中国多个城市火葬场都有门外车辆排队、停车场使用频率高、昼夜无差别现象，卫星照片佐证了民众的说法。</p>
 <p>此外，英国健康数据分析公司Airfinity<ahref="https://www.airfinity.com/articles/airfinitys-covid-19-forecast-for-china-infections-and-deaths">原文</a>）1月12日更新的数据估算，中国目前每天新增染疫357万，死亡人数2万零750人。</p>
-<h2>分析：<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%AB%98%E7%BA%A7%E9%BB%91.md#1">高级黑</a>或倒行逆施 还是<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%90%85%E6%B5%91%E6%B0%B4.md#1">搅浑水</a>？</h2>
+<h2>分析：高级黑或倒行逆施 还是搅浑水？</h2>
 <p>中共官方全然不顾外界的震惊，依然公布着没人相信的数据。《华尔街日报》说，如此低的死亡病例数字不符合主要流行病学家的预测模型，而现实中重症监护室爆满、火葬场不堪重负等迹象，以及一些人公开表示他们的亲人在感染新冠后去世，这些情形也与统计的死亡病例数字出入很大。</p>
 <p>美国资深媒体人魏碧洲美国之音说，中共隐瞒疫情数据不足为奇，但能够把数据造假做到如此离谱的程度，让人有些难以理解。</p>
 <p>“不知道这是中共体制内有人出来做高级黑”，他说，“还是他们真的是在做一些奇奇怪怪、倒行逆施的事情。这个数据简直是完全不可以信的，这就是为什么当中国（中共）说现在要开放的时候，所有国家都把门关起来了，或者是半开着门。”</p>
@@ -39,45 +41,34 @@
 <p>他对美国之音说，官方知道没人会相信它的数据，它也不指望别人会相信，只是想把水搅浑。只要死亡数据成为谁也都说不清楚的无头案，当局的目的就部分达到了。◇</p>
 <p>责任编辑：高静#</p>
 	
-<hr>
-
-
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/11/n13904279.md#1">中共政策不透明 外企受够了 撤离成潮流</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/11/n13904658.md#1">中共调整染疫医保政策 民众将面临沉重负担</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/11/n13904834.md#1">分析：中共玩清零、全阳游戏 世界不买账</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/11/n13904852.md#1">分析：疫情地震后 中共面临四大余震</a></li>
-<hr>
-
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/1/11/n13904279.md#1">中共政策不透明 外企受够了 撤离成潮流</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/1/11/n13904658.md#1">中共调整染疫医保政策 民众将面临沉重负担</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/1/11/n13904834.md#1">分析：中共玩清零、全阳游戏 世界不买账</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/1/11/n13904852.md#1">分析：疫情地震后 中共面临四大余震</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/19/n10650677.md#1" target="_blank">林辉：开了北大自杀先例的史学教授</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/14/5/28/n4165491.md#1" target="_blank">生命在 信仰在</a></li>
-<hr>
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/20/12/8/n12602834.md#1" target="_blank">35国逾九百政要联署 谴责中共迫害法轮功</a>  </li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/1/16/n10979206.md#1" target="_blank">共产暴政录：“五一六”反革命阴谋集团案</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/12/28/n11751194.md#1" target="_blank">【2019盘点】响彻世界政坛的正义之声</a></li><hr>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/15/n13973563.md#1">【未解之谜】血型中的创世之谜</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/12/n13971175.md#1">【天道有知】天知道！改邪归正为何儿子反遭祸</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/19/n13976615.md#1">【未解之谜】这条河干涸了 末日就会到来？！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/15/n13973255.md#1">从彼得兔到兔儿爷，一路陪伴，危难救助</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/9/n13968924.md#1">【救世古鉴】即时应验的现世报</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/20/n13977214.md#1">【时事军事】瓦格纳重新受宠 普京的日子难了</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/20/n13977617.md#1">【财商天下】杭州抢人拟新招 东北留人慢半拍</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/20/n13977147.md#1">【全球新闻】北京医院大火烧出内幕</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/19/n13976663.md#1">余茂春：攻台将只是中共一连串侵略的开始</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/15/n13973790.md#1">王维洛：北京为何设定2025年战略储水目标</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/19/n13976215.md#1">【中国观察】“农管”闹剧登场 惹民怨</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/18/n13975905.md#1">分享邓超与女儿相处趣事 孙俪：这爸爸真可以</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/17/n13975247.md#1">黄晓明上节目执意穿皮鞋比赛 鞋底厚度引关注</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/19/n13976737.md#1">明道惊喜宣布老婆怀二胎 宝宝性别曝光</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/19/n13976767.md#1">周润发跑步新造型抢镜 吴君如跟跑直喊紧张</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/18/n13975985.md#1">吴镇宇6次错失金像影帝 儿子发文调侃引热议</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/18/n13975539.md#1">抚养几个小孩的父母分享推文 让人会心一笑</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/17/n13975003.md#1">3种自然疗法抗过敏 疗效强大堪比激素药</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/18/n13975570.md#1">飞行员透露 乘客在登机时经常犯这个错误</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/17/n13975025.md#1">泡菜吃法竟有这么多 你试过了吗？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/18/n13975340.md#1">逾七成干枸杞子检出除害剂</a></li>
-<hr>
-
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/1/12/n13905345.htm">世卫指中共严重低估疫情 分析：数据假得离谱</a></p><hr>
-
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/1/12/n13905345.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/20/n14418304.md#1">【未解之谜】2025预言盘点——中国篇</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/21/n14418708.md#1">台故宫推筑城风云特展 看台湾独特筑城故事</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/1/n14403677.md#1">善恶有报：泯没良心 恶妇当下变动物</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/3/n14405472.md#1">辛生得神示 改邪归正得福报</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/5/n14406436.md#1">古代的人是如何过年的？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/24/n14421611.md#1">【佳音时刻】川普施压俄停战 中共砸钱市场冷对</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/25/n14422181.md#1">【菁英论坛】中共谋划对美交易 习普谁先卖谁</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/25/n14421729.md#1">【车评】本田首部电车 2025 Honda Prologue Elite</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/23/n14420914.md#1">台湾茶叶大使许正龙的“泡茶密码”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/23/n14420923.md#1">夏洛山：建全球最大填海机场 中共做赔本买卖？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/23/n14420869.md#1">川普废止出生公民权行政令 被法官暂停执行</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/23/n14420977.md#1">王宝强加入周润发跑友圈 为角色成功减重30斤</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/23/n14420918.md#1">刘晓庆：不知自己真实年龄 感觉自己适合属虎</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/24/n14421651.md#1">遭封杀3年 邓伦不露脸不具名拍杂志试水复出</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/23/n14420870.md#1">奥斯卡入围名单揭晓 《璀璨女人梦》成大赢家</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/24/n14421408.md#1">遭CP粉要求认爱金智媛 金秀贤以一句话回应</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/25/n14421953.md#1">世界最短电扶梯在日本 只有5阶</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/24/n14421359.md#1">为什么航空公司租轮胎给飞机使用？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/25/n14421775.md#1">草饲牛肉和榖饲牛肉有什么区别？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/23/n14420499.md#1">这7个下班后的习惯 会让你在工作时分心</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/21/n14418374.md#1">头发越来越少怎么办？3茶饮5穴位养发</a></li>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/1/12/n13905345.htm">世卫指中共严重低估疫情 分析：数据假得离谱</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/1/12/n13905345.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
